--- a/index.html
+++ b/index.html
@@ -5,17 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weding Store</title>
-    <!-- Crimson Text i Open Sans -->
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600i,700|Open+Sans:400,700,800" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    text
+    <!-- Header -->
+    <div class="purple-bg">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row user-links">
+                    <div class="col-3">Dropdown</div>
+                    <div class="col-9 d-flex justify-content-end">
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">My Wishlist</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">About</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <div class="col">Logo</div>
+                </div>
+            </div>
+            <div class="row menu-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-9">Menu</div>
+                        <div class="col-3">Koszyk</div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col">Slider</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Header -->
+
+    <!-- Tabs -->
+    <div class="container">
+        <div class="row">
+            <div class="col">Tab 1</div>
+            <div class="col">Tab 2</div>
+            <div class="col">Tab 3</div>
+        </div>
+    </div>
+    <!-- Tabs -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
