--- a/index.html
+++ b/index.html
@@ -94,7 +94,47 @@
                             <i class="fa fa-search"></i><span>Search</span>
                         </div>
                         <div class="col-2 d-flex justify-content-end">
-                            <div class="cart"><i class="fa fa-shopping-cart"></i><span>2</span>Item(s)<i class="fa fa-angle-down"></i></div>
+                            <div class="cart">
+                                <i class="fa fa-shopping-cart"></i><span>2</span>Item(s)<i class="fa fa-angle-down"></i>
+                                <div class="sub-menu">
+                                    <ul>
+                                        <li>
+                                                <div>
+                                                    <img src="images/cart-1.jpg">
+                                                </div>
+                                                <div class="item-info">
+                                                    <a href="#">
+                                                        <h4>Woman Dress</h4>
+                                                        <h5>1 X $799,00</h5>
+                                                    </a>
+                                                </div>
+                                                <div class="item-del">
+                                                    <a href="#"><i class="fa fa-remove"></i></a>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div>
+                                                        <img src="images/cart-2.jpg">
+                                                    </div>
+                                                    <div class="item-info">
+                                                        <a href="#">
+                                                            <h4>Earrings Etsy</h4>
+                                                            <h5>1 X $2799,00</h5>
+                                                        </a>
+                                                    </div>
+                                                    <div class="item-del">
+                                                        <a href="#"><i class="fa fa-remove"></i></a>
+                                                    </div>
+                                        </li>
+                                    </ul>
+                                    <div class="cart-total d-flex justify-content-between align-items-center">
+                                        Total: <div>$3 598,00</div>
+                                    </div>
+                                    <div class="cart-submit d-flex justify-content-between">
+                                        <a href="#">view cart</a><a href="#">checkout</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
