--- a/index.html
+++ b/index.html
@@ -99,32 +99,32 @@
                                 <div class="sub-menu">
                                     <ul>
                                         <li>
-                                                <div>
-                                                    <img src="images/cart-1.jpg">
-                                                </div>
-                                                <div class="item-info">
-                                                    <a href="#">
-                                                        <h4>Woman Dress</h4>
-                                                        <h5>1 X $799,00</h5>
-                                                    </a>
-                                                </div>
-                                                <div class="item-del">
-                                                    <a href="#"><i class="fa fa-remove"></i></a>
-                                                </div>
+                                            <div>
+                                                <img src="images/cart-1.jpg">
+                                            </div>
+                                            <div class="item-info">
+                                                <a href="#">
+                                                    <h4>Woman Dress</h4>
+                                                    <h5>1 X $799,00</h5>
+                                                </a>
+                                            </div>
+                                            <div class="item-del">
+                                                <a href="#"><i class="fa fa-remove"></i></a>
+                                            </div>
                                         </li>
                                         <li>
-                                                <div>
-                                                        <img src="images/cart-2.jpg">
-                                                    </div>
-                                                    <div class="item-info">
-                                                        <a href="#">
-                                                            <h4>Earrings Etsy</h4>
-                                                            <h5>1 X $2799,00</h5>
-                                                        </a>
-                                                    </div>
-                                                    <div class="item-del">
-                                                        <a href="#"><i class="fa fa-remove"></i></a>
-                                                    </div>
+                                            <div>
+                                                <img src="images/cart-2.jpg">
+                                            </div>
+                                            <div class="item-info">
+                                                <a href="#">
+                                                    <h4>Earrings Etsy</h4>
+                                                    <h5>1 X $2799,00</h5>
+                                                </a>
+                                            </div>
+                                            <div class="item-del">
+                                                <a href="#"><i class="fa fa-remove"></i></a>
+                                            </div>
                                         </li>
                                     </ul>
                                     <div class="cart-total d-flex justify-content-between align-items-center">
@@ -141,7 +141,9 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col">Slider</div>
+                    <div class="col">
+                        slider
+                    </div>
                 </div>
             </div>
         </div>
