--- a/index.html
+++ b/index.html
@@ -140,9 +140,22 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col">
-                        slider
+                <div class="row position-relative">
+                    <div class="slider-nav d-flex">
+                        <div class="c-nav prev-c"></div>
+                        <div class="c-nav next-c"></div>
+                    </div>
+                    <div class="owl-carousel d-flex align-items-center">
+                        <div class="col slide">
+                            <h2>Weding Gifts</h2>
+                            <p>up to <span>50%</span> sale</p>
+                            <button>Check Sale</button>
+                        </div>
+                        <div class="col slide">
+                            <h2>Super Sale</h2>
+                            <p>up to <span>50%</span> sale</p>
+                            <button>View More</button>
+                        </div>
                     </div>
                 </div>
             </div>
