--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             </div>
             <div class="container">
                 <div class="row position-relative">
+                    <img class="slider-bg img-fluid" src="images/slide-img.png" alt="">
                     <div class="slider-nav d-flex">
                         <div class="c-nav prev-c"></div>
                         <div class="c-nav next-c"></div>
@@ -165,13 +166,38 @@
 
     <!-- Tabs -->
     <div class="container">
-        <div class="row">
-            <div class="col">Tab 1</div>
-            <div class="col">Tab 2</div>
-            <div class="col">Tab 3</div>
+        <div class="row tabs-row">
+            <div class="col">
+                <div class="box-white-bg weding-dress d-flex align-items-center">
+                    <div class="cat-tab-content">
+                        <a href="#"></a>
+                        <p>Wedding Dress</p>
+                        <button>Shop Now</button>    
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="box-white-bg jewellery d-flex align-items-center">
+                    <div class="cat-tab-content">
+                        <a href="#"></a>
+                        <p>Jewellery</p>
+                        <button>Shop Now</button>    
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="box-white-bg bouquets d-flex align-items-center">
+                    <div class="cat-tab-content">
+                        <a href="#"></a>
+                        <p>Bouquets</p>
+                        <button>Shop Now</button>    
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Tabs -->
+    
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
