--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
     </div>
     <!-- Header -->
 
-    <!-- Tabs -->
+    <!-- Content Start -->
     <div class="container">
+        <!-- Tabs -->
         <div class="row tabs-row">
             <div class="col">
                 <div class="box-white-bg weding-dress d-flex align-items-center">
@@ -195,8 +196,26 @@
                 </div>
             </div>
         </div>
+        <!-- Tabs -->
+
+        <!-- Featured -->
+            <div class="row">
+                <div class="col items-title">
+                    <ul class="featured-items">
+                        <li><a class="active-tab" href="#">Featured Items</a></li>
+                        <li><a href="#">Bestsellers</a></li>
+                        <li><a href="#">On Sale</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">Box</div>
+                <div class="col">Box</div>
+                <div class="col">Box</div>
+                <div class="col">Box</div>
+            </div>
+        <!-- Featured -->
     </div>
-    <!-- Tabs -->
     
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
