Add quantity functionality

--- a/index.html
+++ b/index.html
@@ -200,19 +200,137 @@
 
         <!-- Featured -->
             <div class="row">
-                <div class="col items-title">
-                    <ul class="featured-items">
-                        <li><a class="active-tab" href="#">Featured Items</a></li>
-                        <li><a href="#">Bestsellers</a></li>
-                        <li><a href="#">On Sale</a></li>
-                    </ul>
+                <div class="col">
+                    <div class="items-title">
+                        <ul class="featured-items">
+                            <li><a class="active-tab" href="#">Featured Items</a></li>
+                            <li><a href="#">Bestsellers</a></li>
+                            <li><a href="#">On Sale</a></li>
+                        </ul>
+                        <div class="items-nav">
+                            <div class="items-nav-c items-nav-prev"></div><div class="items-nav-c items-nav-next"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col">Box</div>
-                <div class="col">Box</div>
-                <div class="col">Box</div>
-                <div class="col">Box</div>
+                <div class="col">
+                    <div class="item-box box-white-bg d-flex flex-column">
+                        <a href="#"></a>
+                        <div class="text-center item-thumbnail">
+                            <div class="item-details align-items-center justify-content-center">
+                                <div class="q-add-cart-form d-flex flex-column">
+                                    <button>Add To Cart</button>
+                                    <div class="q-add-quantity d-flex align-self-center">
+                                        <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                    </div>
+                                </div>
+                                <div class="view-large">
+                                    <a href="#" class="item-details-btn"></a>
+                                </div>
+                                <div class="user-options">
+                                    <a href="#" class="item-details-btn add-to-fav"></a>
+                                    <a href="#" class="item-details-btn add-to-compare"></a>
+                                </div>  
+                            </div>
+                            <div class="item-badges">
+                                <a class="new-badge" href="">NEW</a><a class="sale-badge" href="">-10%</a>
+                            </div>
+                            <img class="img-fluid thumbnail-img" src="images/item-2.jpg" alt="">
+                        </div>
+                        <div class="text-center item-name-price">
+                            <p>White gift box</p>
+                            <p>$69.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="item-box box-white-bg d-flex flex-column">
+                        <a href="#"></a>
+                        <div class="text-center item-thumbnail">
+                            <div class="item-details align-items-center justify-content-center">
+                                <div class="q-add-cart-form d-flex flex-column">
+                                    <button>Add To Cart</button>
+                                    <div class="q-add-quantity d-flex align-self-center">
+                                        <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                    </div>
+                                </div>
+                                <div class="view-large">
+                                    <a href="#" class="item-details-btn"></a>
+                                </div>
+                                <div class="user-options">
+                                    <a href="#" class="item-details-btn add-to-fav"></a>
+                                    <a href="#" class="item-details-btn add-to-compare"></a>
+                                </div>  
+                            </div>
+                            <div class="item-badges">
+                                <a class="sale-badge" href="">-10%</a>
+                            </div>
+                            <img class="img-fluid thumbnail-img" src="images/item-1.jpg" alt="">
+                        </div>
+                        <div class="text-center item-name-price">
+                            <p>White gift box</p>
+                            <p>$69.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="item-box box-white-bg d-flex flex-column">
+                        <a href="#"></a>
+                        <div class="text-center item-thumbnail">
+                            <div class="item-details align-items-center justify-content-center">
+                                <div class="q-add-cart-form d-flex flex-column">
+                                    <button>Add To Cart</button>
+                                    <div class="q-add-quantity d-flex align-self-center">
+                                        <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                    </div>
+                                </div>
+                                <div class="view-large">
+                                    <a href="#" class="item-details-btn"></a>
+                                </div>
+                                <div class="user-options">
+                                    <a href="#" class="item-details-btn add-to-fav"></a>
+                                    <a href="#" class="item-details-btn add-to-compare"></a>
+                                </div>  
+                            </div>
+                            <div class="item-badges">
+                                <a class="new-badge" href="">NEW</a>
+                            </div>
+                            <img class="img-fluid thumbnail-img" src="images/item-2.jpg" alt="">
+                        </div>
+                        <div class="text-center item-name-price">
+                            <p>White gift box</p>
+                            <p>$69.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="item-box box-white-bg d-flex flex-column">
+                        <a href="#"></a>
+                        <div class="text-center item-thumbnail">
+                            <div class="item-details align-items-center justify-content-center">
+                                <div class="q-add-cart-form d-flex flex-column">
+                                    <button>Add To Cart</button>
+                                    <div class="q-add-quantity d-flex align-self-center">
+                                        <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                    </div>
+                                </div>
+                                <div class="view-large">
+                                    <a href="#" class="item-details-btn"></a>
+                                </div>
+                                <div class="user-options">
+                                    <a href="#" class="item-details-btn add-to-fav"></a>
+                                    <a href="#" class="item-details-btn add-to-compare"></a>
+                                </div>  
+                            </div>
+                            <img class="img-fluid thumbnail-img" src="images/item-1.jpg" alt="">
+                        </div>
+                        <div class="text-center item-name-price">
+                            <p>White gift box</p>
+                            <p>$69.00</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         <!-- Featured -->
     </div>
