--- a/index.html
+++ b/index.html
@@ -675,7 +675,187 @@
                 </div>
             </div>      
         <!-- Featured -->
-    </div>    
+        </div>
+        <!-- Content Separator -->
+        <div class="content-sale-bar">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col text-center">
+                        <p>up to <span>50%</span> sale!</p>
+                        <p>wedding gifts</p>
+                        <button>check sale</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Content Separator -->
+        <div class="container">
+            <div class="row">
+                    <div class="col">
+                            <div class="items-title">
+                                <ul class="featured-items">
+                                    <li><a class="active" href="#">New Arrivals</a></li>
+                                </ul>
+                        <div class="items-nav">
+                            <div class="items-nav-c items-nav-prev"></div><div class="items-nav-c items-nav-next"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                    <div class="owl-carousel products-carousel">
+                        <div>
+                            <div class="item-box box-white-bg d-flex flex-column">
+                                <a href="#"></a>
+                                <div class="text-center item-thumbnail">
+                                    <div class="item-details align-items-center justify-content-center">
+                                        <div class="q-add-cart-form d-flex flex-column">
+                                            <button>Add To Cart</button>
+                                            <div class="q-add-quantity d-flex align-self-center">
+                                                <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                            </div>
+                                        </div>
+                                        <div class="view-large">
+                                            <a href="#" class="item-details-btn"></a>
+                                        </div>
+                                        <div class="user-options">
+                                            <a href="#" class="item-details-btn add-to-fav"></a>
+                                            <a href="#" class="item-details-btn add-to-compare"></a>
+                                        </div>  
+                                    </div>
+                                    <div class="item-badges">
+                                        <a class="new-badge" href="">NEW</a><a class="sale-badge" href="">-10%</a>
+                                    </div>
+                                    <img class="img-fluid thumbnail-img" src="images/item-2.jpg" alt="">
+                                </div>
+                                <div class="text-center item-name-price">
+                                    <p>White gift box</p>
+                                    <p>$69.00</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                        <div class="item-box box-white-bg d-flex flex-column">
+                                <a href="#"></a>
+                                <div class="text-center item-thumbnail">
+                                    <div class="item-details align-items-center justify-content-center">
+                                        <div class="q-add-cart-form d-flex flex-column">
+                                            <button>Add To Cart</button>
+                                            <div class="q-add-quantity d-flex align-self-center">
+                                                <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                            </div>
+                                        </div>
+                                        <div class="view-large">
+                                            <a href="#" class="item-details-btn"></a>
+                                        </div>
+                                        <div class="user-options">
+                                            <a href="#" class="item-details-btn add-to-fav"></a>
+                                            <a href="#" class="item-details-btn add-to-compare"></a>
+                                        </div>  
+                                    </div>
+                                    <div class="item-badges">
+                                        <a class="sale-badge" href="">-10%</a>
+                                    </div>
+                                    <img class="img-fluid thumbnail-img" src="images/item-1.jpg" alt="">
+                                </div>
+                                <div class="text-center item-name-price">
+                                    <p>White gift box</p>
+                                    <p>$69.00</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="item-box box-white-bg d-flex flex-column">
+                                <a href="#"></a>
+                                <div class="text-center item-thumbnail">
+                                    <div class="item-details align-items-center justify-content-center">
+                                        <div class="q-add-cart-form d-flex flex-column">
+                                            <button>Add To Cart</button>
+                                            <div class="q-add-quantity d-flex align-self-center">
+                                                <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                            </div>
+                                        </div>
+                                        <div class="view-large">
+                                            <a href="#" class="item-details-btn"></a>
+                                        </div>
+                                        <div class="user-options">
+                                            <a href="#" class="item-details-btn add-to-fav"></a>
+                                            <a href="#" class="item-details-btn add-to-compare"></a>
+                                        </div>  
+                                    </div>
+                                    <div class="item-badges">
+                                        <a class="new-badge" href="">NEW</a><a class="sale-badge" href="">-10%</a>
+                                    </div>
+                                    <img class="img-fluid thumbnail-img" src="images/item-2.jpg" alt="">
+                                </div>
+                                <div class="text-center item-name-price">
+                                    <p>White gift box</p>
+                                    <p>$69.00</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="item-box box-white-bg d-flex flex-column">
+                                <a href="#"></a>
+                                <div class="text-center item-thumbnail">
+                                    <div class="item-details align-items-center justify-content-center">
+                                        <div class="q-add-cart-form d-flex flex-column">
+                                            <button>Add To Cart</button>
+                                            <div class="q-add-quantity d-flex align-self-center">
+                                                <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                            </div>
+                                        </div>
+                                        <div class="view-large">
+                                            <a href="#" class="item-details-btn"></a>
+                                        </div>
+                                        <div class="user-options">
+                                            <a href="#" class="item-details-btn add-to-fav"></a>
+                                            <a href="#" class="item-details-btn add-to-compare"></a>
+                                        </div>  
+                                    </div>
+                                    <div class="item-badges">
+                                        <a class="new-badge" href="">NEW</a>
+                                    </div>
+                                    <img class="img-fluid thumbnail-img" src="images/item-2.jpg" alt="">
+                                </div>
+                                <div class="text-center item-name-price">
+                                    <p>White gift box</p>
+                                    <p>$69.00</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="item-box box-white-bg d-flex flex-column">
+                                <a href="#"></a>
+                                <div class="text-center item-thumbnail">
+                                    <div class="item-details align-items-center justify-content-center">
+                                        <div class="q-add-cart-form d-flex flex-column">
+                                            <button>Add To Cart</button>
+                                            <div class="q-add-quantity d-flex align-self-center">
+                                                <a href="#" class="item-details-btn decrease">-</a><input type="text" value="0"><a href="#" class="item-details-btn increase">+</a>
+                                            </div>
+                                        </div>
+                                        <div class="view-large">
+                                            <a href="#" class="item-details-btn"></a>
+                                        </div>
+                                        <div class="user-options">
+                                            <a href="#" class="item-details-btn add-to-fav"></a>
+                                            <a href="#" class="item-details-btn add-to-compare"></a>
+                                        </div>  
+                                    </div>
+                                    <img class="img-fluid thumbnail-img" src="images/item-1.jpg" alt="">
+                                </div>
+                                <div class="text-center item-name-price">
+                                    <p>White gift box</p>
+                                    <p>$69.00</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div> 
+
+
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
