--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="featured" role="tabpanel" aria-labelledby="featured-tab">
                     <div class="row">
-                        <div class="owl-carousel products-carousel">
+                        <div id="carousel-1" class="owl-carousel products-carousel">
                             <div>
                                 <div class="item-box box-white-bg d-flex flex-column">
                                     <a href="#"></a>
@@ -369,7 +369,7 @@
                 </div>
                 <div class="tab-pane fade" id="bestsellers" role="tabpanel" aria-labelledby="bestsellers-tab">
                     <div class="row">
-                        <div class="owl-carousel products-carousel">
+                        <div id="carousel-2" class="owl-carousel products-carousel">
                             <div>
                                 <div class="item-box box-white-bg d-flex flex-column">
                                     <a href="#"></a>
@@ -522,7 +522,7 @@
                 </div>
                 <div class="tab-pane fade" id="sale" role="tabpanel" aria-labelledby="sale-tab">
                     <div class="row">
-                        <div class="owl-carousel products-carousel">
+                        <div id="carousel-3" class="owl-carousel products-carousel">
                             <div>
                                 <div class="item-box box-white-bg d-flex flex-column">
                                     <a href="#"></a>
@@ -703,7 +703,7 @@
                 </div>
             </div>
             <div class="row">
-                    <div class="owl-carousel products-carousel">
+                    <div id="carousel-4" class="show owl-carousel products-carousel">
                         <div>
                             <div class="item-box box-white-bg d-flex flex-column">
                                 <a href="#"></a>
