--- a/index.html
+++ b/index.html
@@ -857,6 +857,46 @@
                 </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="items-title">
+                        <ul class="featured-items">
+                            <li><a class="active" href="#">New On Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="article">
+                        <div class="article-thumbnail">
+                            <a href="#">Read More</a>
+                            <img class="img-fluid" src="images/article-img-1.jpg" alt="">
+                        </div>
+                        <div class="article-content box-white-bg">
+                            <div class="article-date"><i class="fa fa-clock-o"></i>23.04.17</div>
+                            <h3><a href="#">Best wedding gift ideas</a></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis efficitur rutrum accumsan. Sed leo ante, accumsan a posuere a, mattis sit amet ipsum...</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="article">
+                        <div class="article-thumbnail">
+                            <a href="#">Read More</a>
+                            <img class="img-fluid" src="images/article-img-2.jpg" alt="">
+                        </div>
+                        <div class="article-content box-white-bg">
+                            <div class="article-date"><i class="fa fa-clock-o"></i>23.04.17</div>
+                            <h3><a href="#">Best wedding gift ideas</a></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis efficitur rutrum accumsan. Sed leo ante, accumsan a posuere a, mattis sit amet ipsum...</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div> 
 
 
