--- a/index.html
+++ b/index.html
@@ -897,7 +897,15 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
+        <div class="container-fluid store-info-links-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-5">Test</div>
+                    <div class="col-7">Test</div>
+                </div>
+            </div>
+        </div>
 
 
     <script src="js/jquery-3.2.1.min.js"></script>
