--- a/index.html
+++ b/index.html
@@ -901,8 +901,35 @@
         <div class="container-fluid store-info-links-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-5">Test</div>
-                    <div class="col-7">Test</div>
+                    <div class="col-4">
+                        <div>
+                            <h4><i class="fa fa-map"></i>location</h4>
+                            <p>2332 Hoffman Avenue<br>New York</p>
+                        </div>
+                        <div>
+                            <h4><i class="fa fa-clock-o"></i>operating hours</h4>
+                            <p>Mon.-Fri.: 8am-4pm<br>Sat: 8am-1pm </p>
+                        </div>
+                        <div>
+                            <h4><i class="fa fa-phone"></i>phone number</h4>
+                            <p>212-969-0865<br>646-436-8557</p>
+                        </div>
+                    </div>
+                    <div class="col-4 green-bg-color">
+                        <h4>Quick Links</h4>
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">My whishlist</a></li>
+                            <li><a href="#">Shiping</a></li>
+                            <li><a href="#">Warranty</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">About Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <h4>Be first to know</h4>
+                        <p>Sign for our newsletter to get<br>notifications about our sales.</p>
+                    </div>
                 </div>
             </div>
         </div>
