--- a/index.html
+++ b/index.html
@@ -929,6 +929,15 @@
                     <div class="col-4">
                         <h4>Be first to know</h4>
                         <p>Sign for our newsletter to get<br>notifications about our sales.</p>
+                        <form class="newsletter" action="">
+                            <input type="text" placeholder="Your e-mail"><button type="submit"><i class="fa fa-envelope"></i></button>
+                        </form>
+                        <p>And follow us on social media:</p>
+                        <ul class="footer-social-icons">
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
