--- a/index.html
+++ b/index.html
@@ -942,6 +942,11 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col copyrights text-center">Copyrights © 2017 Bridestore</div>
+            </div>
+        </div>
 
 
     <script src="js/jquery-3.2.1.min.js"></script>
