--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-md">
                     <div class="article">
                         <div class="article-thumbnail">
                             <a href="#">Read More</a>
@@ -882,7 +882,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <div class="article">
                         <div class="article-thumbnail">
                             <a href="#">Read More</a>
