--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <div class="row menu-bg">
                 <div class="container">
                     <div class="row">
-                        <div class="col-8 d-flex">
+                        <div class="col-1 mobile-menu">Menu</div>
+                        <div class="col-8 d-flex desktop-menu">
                             <ul class="main-menu">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">Favors</a>
@@ -89,11 +90,11 @@
                                 <li><a href="#">Stationary</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 search">
+                        <div class="col col-lg-2 search desktop-menu">
                             <input class="hide" type="text" placeholder="Search...">
                             <i class="fa fa-search"></i><span>Search</span>
                         </div>
-                        <div class="col-2 d-flex justify-content-end">
+                        <div class="col col-lg-2 d-flex justify-content-end">
                             <div class="cart">
                                 <i class="fa fa-shopping-cart"></i><span>2</span>Item(s)<i class="fa fa-angle-down"></i>
                                 <div class="sub-menu">
@@ -147,12 +148,12 @@
                         <div class="c-nav next-c"></div>
                     </div>
                     <div class="owl-carousel main-owl-carousel d-flex align-items-center">
-                        <div class="col slide">
+                        <div class="slide">
                             <h2>Weding Gifts</h2>
                             <p>up to <span>50%</span> sale</p>
                             <button>Check Sale</button>
                         </div>
-                        <div class="col slide">
+                        <div class="slide">
                             <h2>Super Sale</h2>
                             <p>up to <span>50%</span> sale</p>
                             <button>View More</button>
@@ -168,7 +169,7 @@
     <div class="container">
         <!-- Tabs -->
         <div class="row tabs-row">
-            <div class="col">
+            <div class="col-lg">
                 <div class="box-white-bg weding-dress d-flex align-items-center">
                     <div class="cat-tab-content">
                         <a href="#"></a>
@@ -177,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
                 <div class="box-white-bg jewellery d-flex align-items-center">
                     <div class="cat-tab-content">
                         <a href="#"></a>
@@ -186,7 +187,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
                 <div class="box-white-bg bouquets d-flex align-items-center">
                     <div class="cat-tab-content">
                         <a href="#"></a>
@@ -857,7 +858,6 @@
                 </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col">
                     <div class="items-title">
@@ -868,7 +868,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md">
+                <div class="col-lg">
                     <div class="article">
                         <div class="article-thumbnail">
                             <a href="#">Read More</a>
@@ -882,9 +882,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-lg">
                     <div class="article">
-                        <div class="article-thumbnail">
+                        <div class="article-thumbnail margin-mobile">
                             <a href="#">Read More</a>
                             <img class="img-fluid" src="images/article-img-2.jpg" alt="">
                         </div>
@@ -901,7 +901,7 @@
         <div class="container-fluid store-info-links-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <div>
                             <h4><i class="fa fa-map"></i>location</h4>
                             <p>2332 Hoffman Avenue<br>New York</p>
@@ -915,7 +915,7 @@
                             <p>212-969-0865<br>646-436-8557</p>
                         </div>
                     </div>
-                    <div class="col-4 green-bg-color">
+                    <div class="col-lg-4 green-bg-color">
                         <h4>Quick Links</h4>
                         <ul>
                             <li><a href="#">My Account</a></li>
@@ -926,7 +926,7 @@
                             <li><a href="#">About Us</a></li>
                         </ul>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <h4>Be first to know</h4>
                         <p>Sign for our newsletter to get<br>notifications about our sales.</p>
                         <form class="newsletter" action="">
@@ -947,8 +947,6 @@
                 <div class="col copyrights text-center">Copyrights © 2017 Bridestore</div>
             </div>
         </div>
-
-
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
