--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container-fluid header-bg">
             <div class="container">
                 <div class="row user-links">
-                    <div class="col-3 d-flex">
+                    <div class="col-md-3 d-flex">
                         <ul class="currency">
                             <li>
                                 <a href="#">USD<i class="fa fa-angle-down"></i></a>
@@ -38,7 +38,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-9 d-flex justify-content-end">
+                    <div class="col-md-9 d-flex justify-content-end">
                         <ul class="currency">
                             <li><a href="#">My Account</a></li>
                             <li><a href="#">My Wishlist</a></li>
