--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
             <div class="row menu-bg">
                 <div class="container">
                     <div class="row">
-                        <div class="col-1 mobile-menu">Menu</div>
+                        <div class="mobile-menu mobile-menu-content">
+                            <a class="close-menu" href="#"><i class="fa fa-angle-up"></i></a>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Favors</a></li>
+                                <li><a href="#">Gifts</a></li>
+                                <li><a href="#">Decoration</a></li>
+                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#">Stationary</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-1 mobile-menu">
+                            <a class="open-menu" href="#"><i class="fa fa-bars"></i></a>
+                        </div>
                         <div class="col-8 d-flex desktop-menu">
                             <ul class="main-menu">
                                 <li><a href="#">Home</a></li>
